[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "artificial-terrains"
version = "0.13"
description = "Modular, extensible terrain generation library"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Erik Wallin", email = "erik.wallin@umu.se" }
]
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "colorcet",
  "opensimplex",
  "PyYaml",
  "tifffile"
  # add any others you rely on (like blender’s Python API if optional)
]

[project.scripts]
generate_terrain = "artificial_terrains.generate_terrain:main"

[project.urls]
Homepage = "https://github.com/erikwallin86/artificial_terrains"

[tool.setuptools.packages.find]
where = ["."]
include = ["artificial_terrains*"]